# conference-tutorials-2026

./: README.md  TUTORIAL_TEMPLATE.md  index.html  pyproject.toml  search.json  zensical.toml
.github/workflows/: deploy-docs.yaml
docs/: index.md
docs/tutorials/: bioclip-search-lite.md  cam-trait-extraction.md  embedding-explorer.md  finer-cam.md  image-embedding-explorer.md  prompt-cam.md  pybioclip.md  sae.md  sst.md
pr-1/: 404.html  index.html  search.json  sitemap.xml
pr-1/stylesheets/: extra.css
pr-1/tutorials/bioclip-search-lite/: index.html
pr-1/tutorials/cam-trait-extraction/: index.html
pr-1/tutorials/embedding-explorer/: index.html
pr-1/tutorials/finer-cam/: index.html
pr-1/tutorials/image-embedding-explorer/: index.html
pr-1/tutorials/prompt-cam/: index.html
pr-1/tutorials/pybioclip/: index.html
pr-1/tutorials/sae/: index.html
pr-1/tutorials/sst/: index.html
pr-10/: search.json
pr-10/tutorials/prompt-cam/: index.html
pr-11/: index.html  search.json
pr-11/tutorials/bioclip-search-lite/: index.html
pr-11/tutorials/prompt-cam/: index.html
pr-11/tutorials/sae/: index.html
pr-12/: search.json
pr-12/tutorials/finer-cam/: index.html
pr-12/tutorials/sst/: index.html
pr-13/: search.json  sitemap.xml
pr-14/: search.json
pr-15/: index.html  search.json
pr-2/stylesheets/: extra.css
pr-3/: index.html  search.json
pr-4/: 404.html  search.json
pr-5/: search.json
pr-6/: 404.html  search.json
pr-7/: search.json
pr-8/: 404.html  search.json
pr-9/: search.json
tutorials/bioclip-search-lite/: index.html
tutorials/finer-cam/: index.html
tutorials/pybioclip/: index.html
tutorials/sae/: index.html
(+27 files in other folders)
